# otus-cpp-prof-hw-14-server

./: CMakeLists.txt  Doxyfile  annotated.html  classClientSession-members.html  classClientSession.html  classClientSession__coll__graph.map  classClientSession__coll__graph.md5  classDataStorage-members.html  classDataStorage.html  classRequestManager-members.html  classRequestManager.html  classTaskServer-members.html  classTaskServer.html  classTaskServer__coll__graph.map  classTaskServer__inherit__graph.md5  classes.html  client__session_8cpp.html  client__session_8cpp__incl.map  client__session_8cpp__incl.md5  client__session_8h.html  client__session_8h__dep__incl.map  client__session_8h__dep__incl.md5  client__session_8h__incl.map  client__session_8h__incl.md5  client__session_8h_source.html  client__session__add__data_8cpp.html  client__session__add__data_8cpp__incl.map  client__session__add__data_8cpp__incl.md5  client__session__del__data_8cpp.html  client__session__del__data_8cpp__incl.map  client__session__del__data_8cpp__incl.md5  client__session__get__data_8cpp.html  client__session__get__data_8cpp__incl.map  client__session__get__data_8cpp__incl.md5  client__session__handle_8cpp.html  client__session__handle_8cpp__incl.map  client__session__handle_8cpp__incl.md5  client__session__reply_8cpp.html  client__session__reply_8cpp__incl.map  client__session__reply_8cpp__incl.md5  (+150 more)
.github/workflows/: release.yml
description/: project_architecture.docx  project_compilation_Linux.txt  project_compilation_Windows.txt  project_description.docx  tables.xlsx  ~$oject_description.docx
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enums_7.js  enumvalues_0.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  (+37 more)
